Changed git ignore

--- a/smak/conf/chatclient.conf
+++ b/smak/conf/chatclient.conf
@@ -1,5 +1,5 @@
 -h localhost
--u Jonathan
--p 2000
+-u <USERNAME>
+-p <PORT NUMBER>
 -t test/test.txt
--L /home/jonathan/Desktop/CS457_Proj1/457CS/smak/logs/
+-L <LOG FILE PATH>
