created makeMessage classes to parse JSON

--- a/smak/Client/CMakeLists.txt
+++ b/smak/Client/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(Client client.cpp client.h)
+add_library(Client client.cpp client.h makeMessage.cpp makeMessage.h)
 target_link_libraries(Client)
