--- a/smak/Server/CMakeLists.txt
+++ b/smak/Server/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(Server netController.cpp netController.h srvState.cpp srvState.h tcpServerSocket.cpp tcpServerSocket.h tcpUserSocket.cpp tcpUserSocket.h driver.cpp driver.h User.cpp User.h)
+add_library(Server netController.cpp netController.h srvState.cpp srvState.h tcpServerSocket.cpp tcpServerSocket.h tcpUserSocket.cpp tcpUserSocket.h driver.cpp driver.h User.cpp User.h Channel.cpp Channel.h)
 target_link_libraries(Server)
