--- a/smak/chatclient.conf
+++ b/smak/chatclient.conf
@@ -1,5 +1,7 @@
 -h localhost
--u <USERNAME>
--p <PORT NUMBER>
+-u David
+-p 2000
 -t tests/test.txt
--L <LOG FILE PATH>
+-L /home/jonathan/Desktop/CS457_Proj1/457CS/smak/logs/Client
+-P @
+-a admin
