--- a/smak/server.conf
+++ b/smak/server.conf
@@ -1,6 +1,6 @@
 -h localhost
--u <USERNAME>
--p <PORT NUMBER>
+-u David
+-p 2000
 -t tests/test.txt
 -L /home/jonathan/Desktop/CS457_Proj1/457CS/smak/logs/Client
 -P @
