Finished File opening/parsing for server and INFO Json request

--- a/smak/server.conf
+++ b/smak/server.conf
@@ -1,7 +1,5 @@
--h localhost
--u <USERNAME>
--p <PORT NUMBER>
--t tests/test.txt
--L /home/jonathan/Desktop/CS457_Proj1/457CS/smak/logs/Client
--P @
--a admin
+-s Server_1
+-b /home/jonathan/Desktop/CS457_Proj1/457CS/smak/logs/Server/
+-u /home/jonathan/Desktop/CS457_Proj1/457CS/smak/logs/Server/
+-c /home/jonathan/Desktop/CS457_Proj1/457CS/smak/logs/Server/
+-p 2000
