Smak my server up!

--- a/smak/CMakeLists.txt
+++ b/smak/CMakeLists.txt
@@ -4,5 +4,5 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 add_subdirectory(Server)
 add_subdirectory(Client)
-add_executable(smak main.cpp main.h utils.h)
+add_executable(smak main.cpp main.h utils.h ../smaker/smakerMain.cpp ../smaker/smakerMain.h ../smaker/smakerClient.cpp ../smaker/smakerClient.h)
 target_link_libraries(smak Server Client Threads::Threads)
